Added type module for ES modules

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
+
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
